error codes fix
